# shop_z81

./: pyproject.toml
.github/workflows/: main.yml
shop_project/: .prospector.yaml  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
shop_project/.github/workflows/: main.yml
shop_project/catalog/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
shop_project/catalog/management/commands/: bot.py
shop_project/catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_basket_count.py  0003_alter_order_date_created.py
shop_project/catalog/tests/: test_client_views.py
shop_project/catalog/tests/fixtures/: categories_fixture.json  discounts_fixture.json  producers_fixture.json  products_fixture.json
shop_project/shop_project/: celery.py  settings.py  urls.py
shop_project/users/: admin.py  models.py  urls.py  views.py
shop_project/users/migrations/: 0001_initial.py  0002_customuser_is_superuser.py  0003_alter_customuser_options.py
shop_project/users/tests/: test_users.py
