[tool.poetry]
name = "shop-z81-django"
version = "0.1.0"
description = ""
authors = ["SkrytnayaRediska <olga@arusnavi.ru>"]
readme = "README.md"
packages = [{include = "shop_z81_django"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
django = "^4.1.7"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
